Added more tables in init.sql, added printers.html with all printers view, added logic for viewing all printers

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,19 @@
 <html>
 <body>
 
-<h2>Printer Serial Number Form</h2>
+<h2>Printer Info Input Form</h2>
 
-<form action="/" method="post">
+<form method="POST">
   <label for="printer_serial_number">Printer Serial Number:</label><br>
-  <input type="text" id="printer_serial_number" name="printer_serial_number" value=""><br>
+  <input type="text" id="printer_serial_number" name="printer_serial_number"><br>
+  <label for="counter_black">Counter BW:</label><br>
+  <input type="number" id="counter_black" name="counter_black"><br>
+  <label for="counter_color">Counter Color:</label><br>
+  <input type="number" id="counter_color" name="counter_color"><br>
   <input type="submit" value="Submit">
-</form> 
+</form>
+
+<a href="/printers"><button>Show All Printers</button></a>
 
 </body>
 </html>
