--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,15 @@
 <html>
 <body>
 
-<h2>Printer Info Input Form</h2>
+<h2>Main Menu</h2>
 
-<form method="POST">
-  <label for="printer_serial_number">Printer Serial Number:</label><br>
-  <input type="text" id="printer_serial_number" name="printer_serial_number"><br>
-  <label for="counter_black">Counter BW:</label><br>
-  <input type="number" id="counter_black" name="counter_black"><br>
-  <label for="counter_color">Counter Color:</label><br>
-  <input type="number" id="counter_color" name="counter_color"><br>
-  <input type="submit" value="Submit">
-</form>
-
-<a href="/printers"><button>Show All Printers</button></a>
+<ul>
+  <li><a href="/add_printer">Add a new printer</a></li>
+  <li><a href="/printers">Show all printers</a></li>
+  <li><a href="/register">Register a new user</a></li>
+  <li><a href="/register_client">Register a new client</a></li>
+  <!-- Add other links as needed -->
+</ul>
 
 </body>
 </html>
