Added styles and cosmetics

--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends "base.html" %}
 
+{% block content %}
 <h2>Add Printer</h2>
 
 <form method="POST">
@@ -15,6 +14,4 @@
 </form>
 
 <a href="/"><button>Back</button></a>
-
-</body>
-</html>
+{% endblock %}
