--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,35 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends "base.html" %}
 
-<h2>Main Menu</h2>
+{% block content %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Main Menu</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/register">Register a new user</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/register_client">Register a new client</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/add_printer">Add a new printer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/printers">Show all printers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/add_contract">Add Contract</a>
+            </li>
+            <!-- Add other links as needed -->
+        </ul>
+    </div>
+</nav>
 
-<ul>
-  <li><a href="/add_printer">Add a new printer</a></li>
-  <li><a href="/printers">Show all printers</a></li>
-  <li><a href="/register">Register a new user</a></li>
-  <li><a href="/register_client">Register a new client</a></li>
-  <!-- Add other links as needed -->
-</ul>
+<!-- Your site content goes here -->
 
-</body>
-</html>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+{% endblock %}
