--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Register User</h2>
+<h2>Register Admin</h2>
 
-<form action="/register" method="post">
+<form action="/register_admin" method="post">
   <label for="login">Login:</label><br>
-  <input type="text" id="login" name="login" required><br>
+  <input type="text" id="login" name="login" value="admin" readonly required><br>
   <label for="password">Password:</label><br>
   <input type="password" id="password" name="password" required><br>
-  <label for="admin">Admin rights?:</label><br>
-  <input type="checkbox" id="admin" name="admin"><br>
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email" required><br>
   <input type="submit" value="Register">
