--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,34 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+    {% if show_menu is not defined or show_menu %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Main Menu</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register a new user</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/registerclient">Register a new client</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/add_printer">Add a new printer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/printers">Show all printers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/add_contract">Add Contract</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    {% endif %}
     {% block content %}{% endblock %}
-    <!-- Add your JavaScript links here -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
