--- a/templates/registerclient.html
+++ b/templates/registerclient.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends "base.html" %}
 
+{% block content %}
 <h2>Register Client</h2>
 
 <form method="POST">
@@ -21,6 +20,6 @@
     <input type="email" id="email" name="email" required><br>
     <input type="submit" value="Register">
 </form>
+
 <a href="/"><button>Back</button></a>
-</body>
-</html>
+{% endblock %}
