--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -13,5 +13,5 @@
   <input type="submit" value="Register">
 </form>
 
-<a href="/"><button>Back</button></a>
+<a href="/index"><button>Back</button></a>
 {% endblock %}
