Added users subpage, reworked login, added more graphics.

--- a/templates/add_contract.html
+++ b/templates/add_contract.html
@@ -52,7 +52,7 @@
             return false;
         }
     
-        return confirm('Contract saved successfully!');
+        return true;
     }
     </script>
 
