--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,23 @@
 <html>
 <head>
     <title>Printer Management Cloud Application</title>
-    <!-- Add your CSS links here -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}    
     {% if show_menu is not defined or show_menu %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand navbar-brand-logo" href="{{ url_for('index') }}">
@@ -17,22 +29,38 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/registerclient">Add a new client</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/add_printer">Add a new printer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/add_contract">Add Contract</a>
-                </li>
+                {% if current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="/printers">Show all printers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/register">Add a new user</a>
+                    <a class="nav-link" href="/users">Show all users</a>
                 </li>
+                    {% if current_user.admin %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/registerclient">Add a new client</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/add_printer">Add a new printer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/add_contract">Add Contract</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Add a new user</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
             </ul>
+            {% if current_user.is_authenticated %}
+                <div class="ml-auto">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            {% endif %}
         </div>
     </nav>
     {% endif %}
