--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="container mt-3">
+      <div class="alert alert-info">
+        {% for message in messages %}
+          {{ message }}
+        {% endfor %}
+      </div>
+    </div>
+  {% endif %}
+{% endwith %}
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-4">
