--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Register User</h2>
 
-<form action="/register" method="post" onsubmit="return confirm('User saved successfully!');">
+<form action="/register" method="post">
   <label for="login">Login:</label><br>
   <input type="text" id="login" name="login" required><br>
   <label for="password">Password:</label><br>
