--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="/add_printer">Add a new printer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/add_contract">Add Contract</a>
+                            <a class="nav-link" href="/add_contract">Add contract</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/register">Add a new user</a>
