--- a/templates/login.html
+++ b/templates/login.html
@@ -12,31 +12,30 @@
     </div>
   {% endif %}
 {% endwith %}
-<div class="container mt-5">
+<div class="container d-flex align-items-center justify-content-center vh-100">
     <div class="row justify-content-center">
-        <div class="col-4">
-            <div class="form-group text-center">
-                <picture>
-                    <source media="(min-width: 1200px)" srcset="{{ url_for('static', filename='img/logoapp_1753px.png') }}">
-                    <source media="(min-width: 992px)" srcset="{{ url_for('static', filename='img/logoapp_875px.png') }}">
-                    <source media="(min-width: 576px)" srcset="{{ url_for('static', filename='img/logoapp_437px.png') }}">
-                    <img src="{{ url_for('static', filename='img/logoapp_217px.png') }}" alt="App Logo" class="img-fluid">
-                </picture>
-            </div>
-            <form action="/login" method="post">
-                <div class="form-group">
-                    <label for="login">Login:</label>
-                    <input type="text" class="form-control" id="login" name="login" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <div class="form-group text-center">
-                    <button type="submit" class="btn login-button">Login</button>
-                </div>
-            </form>
+        <div class="text-center">
+            <picture>
+                <source media="(min-width: 1200px)" srcset="{{ url_for('static', filename='img/logoapp_1753px.png') }}">
+                <source media="(min-width: 992px)" srcset="{{ url_for('static', filename='img/logoapp_875px.png') }}">
+                <source media="(min-width: 576px)" srcset="{{ url_for('static', filename='img/logoapp_437px.png') }}">
+                <img src="{{ url_for('static', filename='img/logoapp_217px.png') }}" alt="App Logo" class="img-fluid">
+            </picture>
+            <br><br>
         </div>
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label for="login">Login:</label>
+                <input type="text" class="form-control" id="login" name="login" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="form-group text-center">
+                <button type="submit" class="btn login-button">Login</button>
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %}
