--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -30,3 +30,45 @@
     height: 72px;
     width: auto;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Adjust as needed */
+  }
+  
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 40%; 
+    margin: auto;
+  }
+  .form-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .form-item {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+  .button-group {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  .button-group button, .button-group input[type="submit"] {
+    background-color: #E0EFFF;
+    color: #656263;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+.vh-100 {
+  height: 50vh;
+}
