--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Register User</h2>
+
+
 
 <form action="/register" method="post">
-  <label for="login">Login:</label><br>
-  <input type="text" id="login" name="login" required><br>
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" required><br>
-  <label for="admin">Admin rights?:</label><br>
-  <input type="checkbox" id="admin" name="admin"><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="submit" value="Register">
+  <h2>Register User</h2>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="login">Login:<span class="required">*</span></label>
+      <input type="text" id="login" name="login" required>
+    </div>
+    <div class="form-item">
+      <label for="password">Password:<span class="required">*</span></label>
+      <input type="password" id="password" name="password" required>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="email">Email:<span class="required">*</span></label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="form-item">
+      <label for="admin">Is user an admin?:</label>
+      <input type="checkbox" id="admin" name="admin">
+    </div>
+  </div>
+  <div class="button-group">
+    <input type="submit" value="Submit">
+    <button type="button" onclick="window.location.href='/index'">Back</button>
+  </div>
 </form>
 
-<a href="/index"><button>Back</button></a>
 {% endblock %}
