--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -1,17 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Register Admin</h2>
 
-<form action="/register_admin" method="post">
-  <label for="login">Login:</label><br>
-  <input type="text" id="login" name="login" value="admin" readonly required><br>
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" required><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="submit" value="Register">
+<div class="container">
+  <h2>First app run - Register Admin</h2>
+
+  <form action="/register_admin" method="post">
+  <div class="form-row">
+    <div class="form-item">
+      <label for="login">Login:<span class="required">*</span></label>
+      <input type="text" id="login" name="login" value="admin" readonly required>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="password">Password:<span class="required">*</span></label>
+      <input type="password" id="password" name="password" required>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="email">Email:<span class="required">*</span></label>
+      <input type="email" id="email" name="email" required>
+    </div>
+  </div>
+  <div class="button-group">
+    <input type="submit" value="Submit" class="login-button">
+  </div>
 </form>
 
-<a href="/index"><button>Back</button></a>
 {% endblock %}
