--- a/templates/users.html
+++ b/templates/users.html
@@ -6,7 +6,7 @@
     <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Username</th>
+            <th scope="col">Username - Login</th>
             <th scope="col">Email</th>
         </tr>
     </thead>
