--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/register">Add a new user</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="service_requests">Service Requests</a>
+                        </li>
                     {% endif %}
                 {% endif %}
             </ul>
