--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<a href="{{ url_for('new_service_request') }}" class="tlbtn">New Service Request</a>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
