--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 
+<div class="center-container">
+  <h2>Add printer</h2>
+</div>
+
 <form method="POST">
-  <h2>Add Printer</h2>
   <div class="form-row">
     <div class="form-item">
       <label for="printer_serial_number">Printer Serial Number:<span class="required"> *</span></label>
