--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <h2>First app run - Register Admin</h2>
+  <h2>First app run - register admin</h2>
 
   <form action="/register_admin" method="post">
   <div class="form-row">
