--- a/templates/registerclient.html
+++ b/templates/registerclient.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-
+<div class="center-container">
+  <h2>Register Client</h2>
+</div>
 
 <form method="POST">
-    <h2>Register Client</h2>
     <div class="form-row">
       <div class="form-item">
         <label for="tax_id">Tax ID:<span class="required">*</span></label>
