--- a/templates/service_requests.html
+++ b/templates/service_requests.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Service Requests</h1>
+
+<div class="center-container">
+  <h2>Service requests</h2>
+</div>
 
 {% if service_requests %}
   {% for request in service_requests %}
