--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -38,7 +38,6 @@
     height: 100vh; /* Adjust as needed */
   }
   
-
 form {
     display: flex;
     flex-direction: column;
@@ -77,21 +76,69 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px; /* Adjust as needed */
-  height: 100px; /* Adjust as needed */
+  width: 100px;
+  height: 100px;
   padding: 10px;
   background-color: #E0EFFF;
   color: #656263;
   text-decoration: none;
-  border: 2px solid #656263; /* Adjust as needed */
-  border-radius: 2px;
+  border: 1px solid #80bdff;
+  border-radius: 5px;
   white-space: normal;
   text-align: center;
-  line-height: 1.2; /* Adjust as needed */
+  line-height: 1.2;
+  margin: 20px 20px 20px 20px;
 }
 
 .tlbtn:hover {
   text-decoration: none;
-  color: #545454; /* Adjust as needed */
-  box-shadow: 0 0 10px rgba(0,0,0,0.25); /* Adjust as needed */
+  color: #545454;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25); 
+}
+
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px auto;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 600px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+  text-align: center;
+}
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+.admin-icon {
+  margin-left: 5px;
+}
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  width: 50%; /* Adjust as needed */
+  margin: 0 auto;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* Adjust as needed */
 }
