Reimagined and redesigned contract / printers functionality

--- a/templates/printers.html
+++ b/templates/printers.html
@@ -27,7 +27,7 @@
       <td>{{ printer.black_counter }}</td>
       <td>{{ printer.color_counter }}</td>
       <td>{{ printer.company if printer.company else 'Not assigned to client' }}</td>
-      <td>{{ printer.contract_id if printer.contract_id else 'No contract assigned' }}</td>
+      <!--<td>{{ printer.contract_id if printer.contract_id else 'No contract assigned' }}</td>-->
     </tr>
     {% endfor %}
   </table>
