--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -3,9 +3,10 @@
 {% block content %}
 
 <div class="container">
-  <h2>First app run</h2><br>
-  <h2>Register admin and Your company</h2>
-
+  <div>
+    <h2>First app run</h2>
+    <h2>Register admin and Your company</h2>
+  </div>
   <form action="/register_admin" method="post">
   <div class="form-row">
     <div class="form-item">
