--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -19,12 +19,83 @@
   </div>
   <div class="form-row">
     <div class="form-item">
+      <label for="assigned">Assigned:</label>
+      <input type="checkbox" id="assigned" name="assigned">
+    </div>
+    <div class="form-item">
+        <label for="active">Active:</label>
+        <input type="checkbox" id="active" name="active" checked>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="company">Client - Company name:</label>
+      <input list="companies" type="text" id="company" name="company">
+      <datalist id="companies">
+        {% for client in clients %}
+          <option value="{{ client[0] }}">
+        {% endfor %}
+      </datalist>
+    </div>
+    <div class="form-item">
+      <label for="contract_id">Contract/Warranty ID:</label>
+      <input type="text" id="contract_id" name="contract_id">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
       <label for="counter_black">Counter Black:</label>
       <input type="number" id="counter_black" name="counter_black" value="0" min="0">
     </div>
     <div class="form-item">
       <label for="counter_color">Counter Color:</label>
       <input type="number" id="counter_color" name="counter_color" value="0" min="0">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="warranty">Warranty:</label>
+      <input type="checkbox" id="warranty" name="warranty">
+    </div>
+    <div class="form-item">
+      <label for="warranty_duration">Warranty Duration:</label>
+      <input type="number" id="warranty_duration" name="warranty_duration" min="0">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="service_contract">Service Contract:</label>
+      <input type="checkbox" id="service_contract" name="service_contract">
+    </div>
+    <div class="form-item">
+      <label for="lease_rent">Lease Rent:</label>
+      <input type="number" id="lease_rent" name="lease_rent" min="0" step="0.1">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="price_black">Price Black:</label>
+      <input type="number" id="price_black" name="price_black" min="0" step="0.01">
+    </div>
+    <div class="form-item">
+      <label for="price_color">Price Color:</label>
+      <input type="number" id="price_color" name="price_color" min="0" step="0.01">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="start_date">Start Date:</label>
+      <input type="date" id="start_date" name="start_date">
+    </div>
+    <div class="form-item">
+      <label for="contract_duration">Contract Duration:</label>
+      <input type="number" id="contract_duration" name="contract_duration" min="0">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="additional_info">Additional Info:</label>
+      <input type="text" id="additional_info" name="additional_info">
     </div>
   </div>
   <div class="button-group">
@@ -43,6 +114,48 @@
       }
       var model = printerModels[prefix] || 'Unknown model';
       document.getElementById('model').value = model;
+  });
+
+  var warrantyCheckbox = document.getElementById('warranty');
+  var serviceContractCheckbox = document.getElementById('service_contract');
+  var warrantyDurationInput = document.getElementById('warranty_duration');
+  var leaseRentInput = document.getElementById('lease_rent');
+  var priceBlackInput = document.getElementById('price_black');
+  var priceColorInput = document.getElementById('price_color');
+
+  warrantyCheckbox.addEventListener('change', function() {
+    if (this.checked) {
+      serviceContractCheckbox.disabled = true;
+      leaseRentInput.disabled = true;
+      priceBlackInput.disabled = true;
+      priceColorInput.disabled = true;
+    } else {
+      serviceContractCheckbox.disabled = false;
+      leaseRentInput.disabled = false;
+      priceBlackInput.disabled = false;
+      priceColorInput.disabled = false;
+    }
+  });
+
+  serviceContractCheckbox.addEventListener('change', function() {
+    if (this.checked) {
+      warrantyCheckbox.disabled = true;
+      warrantyDurationInput.disabled = true;
+    } else {
+      warrantyCheckbox.disabled = false;
+      warrantyDurationInput.disabled = false;
+    }
+  });
+  
+  var assignedCheckbox = document.getElementById('assigned');
+  var clientInput = document.getElementById('company');
+
+  assignedCheckbox.addEventListener('change', function() {
+    if (this.checked) {
+      clientInput.disabled = false;
+    } else {
+      clientInput.disabled = true;
+    }
   });
 </script>
 
