--- a/templates/registerclient.html
+++ b/templates/registerclient.html
@@ -24,7 +24,7 @@
       </div>
       <div class="form-item">
         <label for="postal_code">Postal Code:<span class="required">*</span></label>
-        <input type="text" id="postal_code" name="postal_code" pattern="\d{2}-\d{3}" required>
+        <input type="text" id="postal_code" name="postal_code" pattern="[0-9]{5}" required>
       </div>
     </div>
     <div class="form-row">
@@ -34,7 +34,7 @@
       </div>
       <div class="form-item">
         <label for="phone">Phone:<span class="required">*</span></label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{9}" required>
       </div>
     </div>
     <div class="form-row">
