--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="button-container">
-    <a href="{{ url_for('new_service_request') }}" class="tlbtn">New Service Request</a>
+    <a href="{{ url_for('new_service_request') }}" class="tlbtn">Add New Service Request</a>
     <a href="{{ url_for('my_requests') }}" class="tlbtn">Requests assigned to me</a>
 </div>
 
