--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Show all users</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/clients">Show all clients</a>
+                </li>
                     {% if current_user.admin %}
                         <li class="nav-item">
                             <a class="nav-link" href="/registerclient">Add a new client</a>
