--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -30,12 +30,12 @@
   <div class="form-row">
     <div class="form-item">
       <label for="company">Client - Company name:</label>
-      <input list="companies" type="text" id="company" name="company" disabled>
-      <datalist id="companies">
+      <select id="company" name="company" disabled>
           {% for client in clients %}
-          <option value="{{ client[0] }}">
+          <option value="{{ client.tax_id }}">{{ client.company }}</option>
           {% endfor %}
-      </datalist>
+      </select>
+    </div>
   </div>
     <div class="form-item">
       <label for="contract_id">Contract/Warranty ID:</label>
